--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,17 +1,28 @@
 <!--  This file is app/views/movies/index.html.erb -->
 <h2>All Movies</h2>
 
-<%#  Part 2: Start here... %>
+<%= form_tag movies_path, method: :get, id: 'ratings_form' do %>
+  <%= hidden_field_tag :home, "1" %>
+  Include:
+  <% @all_ratings.each do |rating| %>
+    <div class="form-check  form-check-inline">
+      <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
+      <%= check_box_tag "ratings[#{rating}]", "1",  @ratings_to_show.include?(rating), class: 'form-check-input' %>
+    </div>
+  <% end %>
+  <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
+<% end %>
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th class="<%= 'hilite bg-warning' if @sort == 'title' %>"> <%= link_to "Movie Title", movies_path(sort: "title", ratings: Hash[@ratings_to_show.collect {|r| [r, 1]}], home: "1" ), id: "title_header" %></th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th class="<%= 'hilite bg-warning' if @sort == 'release_date' %>"> <%= link_to "Release Date", movies_path(sort: "release_date", ratings: Hash[@ratings_to_show.collect {|r| [r, 1]}], home: "1" ), id: "release_date_header" %></th>
       <th>More Info</th>
     </tr>
   </thead>
+
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
